--- a/openaps.ini
+++ b/openaps.ini
@@ -41,7 +41,7 @@ gather = ! bash -c "rm -f monitor/* enact/* settings/*; ( openaps get-bg && open
 wait-for-bg = ! bash -c "cp monitor/glucose.json monitor/last-glucose.json; while(diff -q monitor/last-glucose.json monitor/glucose.json); do echo -n .; sleep 10; openaps get-bg >/dev/null; done"
 suggest = report invoke enact/suggested.json
 enact = ! bash -c "openaps use pump set_temp_basal enact/suggested.json"
-loop = ! bash -c "openaps monitor-cgm 2>/dev/null && ( openaps preflight && openaps gather && openaps suggest && enact && openaps pump-status && openaps status-upload) || echo No CGM data."
+loop = ! bash -c "openaps monitor-cgm 2>/dev/null && ( openaps preflight && openaps gather && openaps suggest && openaps enact && openaps pump-status && openaps status-upload) || echo No CGM data."
 
 [report "monitor/clock.json"]
 device = pump
